ingress-nginx/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: ingress-nginx
  labels:
    app: smart-proxy-service
spec:
  ports:
  - port: 80
    targetPort: 9999
  selector:
    app: smart-proxy-service
