ingress-nginx/ingress-instance.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smart-proxy-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s-master-shanghai.dev.meshlab.cn
    http:
      paths:
      - backend:
          serviceName: smart-proxy
          servicePort: 80
